      to be that important for grml).
    - Drop windowlab (see #410618).
    - Drop workbone (see #429178).
  * Add check for valid Debian suite name to avoid breakage of sources.list
    if someone calls grml-live with a typo in the -s option.
  * Add exception for libewf1 and libstdc++2.10-glibc2.2 in
    /etc/grml/fai/config/scripts/GRMLBASE/40-deborphan.

 -- Michael Prokop <mika@grml.org>  Mon, 03 Aug 2009 01:39:30 +0200

grml-live (0.9.19) unstable; urgency=low

  * Software related changes in GRML_FULL:
    - add btrfs-tools
    - add conkeror (thanks to Axel Beckert) [Closes: issue698]
    - add gptsync
    - add nfswatch
    - add nilfs2-tools
    - add pigz
    - add postmark
    - add tableau-parm
    - drop all LaTeX related packages (following the result
      of the recent "Removal of LaTeX on grml" poll):
      auctex catdvi ctioga dvipng gnuhtml2latex lacheck latex-beamer
      latexmk latex-mk latextug latex-xcolor pdfjam pgf
      preview-latex-style tex-common texify texlive-base
      texlive-base-bin texlive-common texlive-doc-base
      texlive-fonts-recommended texlive-lang-german texlive-latex-base
      texlive-latex-recommended texpower tth tthsum vim-latexsuite
   - Add class LATEX which provides all the LaTeX (related) packages
     that have been removed from GRML_FULL.
  * Software related changes in GRML_FORENSIC:
    - drop stegdetect (see #507908)
    - add several further packages: 
      acpi apache2 apache2-utils at bluez-utils cpufrequtils cryptcat
      cups cups-pdf dc dsniff dvd+rw-tools gphoto2 hdparm hping3
      mysql-client netdiscover nmap os-prober poppler-utils pppconfig
      rdesktop readahead readpst recoverdm rifiuti rifiuti2 rpm samba
      samdump2 sdparm sg3-utils smbclient socat sqlite3 tcpdump
      tcpflow tcpreplay tcptrace tcptrack tcpxtract tct time unhide
      untex uuid-runtime vinetto w3m wamerican whois wireshark wv
      wvdial zfs-fuse
    Thanks also to Hans-Peter Merkel for his tool list.