@@ -13,8 +13,11 @@ set -e
 [ -n "$MIRROR_DIRECTORY" ] || exit 1
 cd $MIRROR_DIRECTORY || exit 2
 
-for flavour in grml-small_lenny grml-small_sid grml-medium_lenny grml-medium_sid grml_sid grml_lenny \
-               grml64-small_lenny grml64-small_sid grml64-medium_lenny grml64-medium_sid grml64_sid grml64_lenny ; do
+cd "$DAILY_DIR"
+echo "---------------------------" >> "$DAILY_DIR"/.timestamp_link
+for flavour in grml-medium_lenny   grml-medium_squeeze   grml-medium_sid   grml-small_lenny   grml-small_squeeze  grml-small_sid \
+               grml64-medium_lenny grml64-medium_squeeze grml64-medium_sid grml64-small_lenny grml64-small_squeeze grml64-small_sid \
+               grml64_lenny grml64_squeeze grml64_sid grml_lenny grml_squeeze grml_sid ; do
   ISO="$(ls -1 $flavour/*.iso | tail -1)"
   if [ -n "$ISO" ] ; then
      ln -sf $ISO $(basename ${ISO%%_[0-9]*})_latest.iso
